# project-5-gpus-with-cuda-team-6

./: .gitignore  CMakeLists.txt  README.md  diffusion  diffusion.cu  part1_barchart.py  plotting.py
